--- a/src/app/components/tweet-list/tweet-list.component.html
+++ b/src/app/components/tweet-list/tweet-list.component.html
@@ -5,6 +5,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">Tweet List</div>
+    <div class="col">Tweet List
+        <i class="fab fa-accessible-icon"></i>
+    </div>
   </div>
 </div>
