--- a/src/app/components/tweet/tweet.component.html
+++ b/src/app/components/tweet/tweet.component.html
@@ -1,3 +1,41 @@
-<p>
-  tweet works!
-</p>
+<div class="container">
+  <div class="row p-2">
+    <div class="col-md-1">
+      <img class="img-fluid img-profile" src="https://cdn2.stylecraze.com/wp-content/uploads/2013/01/2162_Eyebrows-For-Square-Face-Shape_shutterstock_148055564.jpg"
+        alt="">
+    </div>
+    <div class="col-md-11">
+      <textarea class="w-100 radio-tweet" rows="2" placeholder="¿Qué esta pasando?"></textarea>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row p-2">
+    <div class="col-md-6 col-xs-12 center-v">
+      <div class="container">
+        <div class="row text-primary">
+          <div class="col">
+            <i class="fas fa-image fa-lg"></i>
+          </div>
+          <div class="col">
+            <i class="fab fa-git-square fa-lg"></i>
+          </div>
+          <div class="col">
+            <i class="fas fa-chart-area fa-lg"></i>
+          </div>
+          <div class="col">
+            <i class="fas fa-map-marker-alt fa-lg"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-xs-3 text-primary center-v text-right">
+      <i class="fas fa-plus-circle fa-2x"></i>
+    </div>
+    <div class="col-md-3 col-xs-3 text-right">
+      <a class="btn blue-primary text-white radio-25" role="button">
+        <strong>Twittear</strong>
+      </a>
+    </div>
+  </div>
+</div>
