--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col bg-secondary">
+    <div class="col p-0">
       <app-navbar></app-navbar>
     </div>
   </div>
