--- a/src/app/components/tweet-list/tweet-list.component.html
+++ b/src/app/components/tweet-list/tweet-list.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-dark">
   <div class="row">
-    <div class="col">
+    <div class="col" style="background-color: #E5EFF7;">
       <app-tweet></app-tweet>
     </div>
   </div>
