--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h6 style="margin: auto" class="modal-title text-center" id="modal-basic-title">Nuevo Tweet</h6>
+    <h6 style="margin: auto" class="modal-title text-center" id="modal-basic-title">New Tweet</h6>
     <button style="margin-left: 0" type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -13,5 +13,5 @@
   </div>-->
 </ng-template>
 <a  style="border-radius: 25px" class="btn blue-primary text-white" role="button"  (click)="open(content)">
-  <strong>Twittear</strong>
+  <strong>Tweet</strong>
 </a>
