--- a/src/app/components/tweet/tweet.component.html
+++ b/src/app/components/tweet/tweet.component.html
@@ -5,7 +5,7 @@
         alt="">
     </div>
     <div class="col-md-11">
-      <textarea class="w-100 radio-tweet" rows="2" placeholder="¿Qué esta pasando?"></textarea>
+      <textarea class="w-100 radio-tweet" rows="2" placeholder="What's happening?"></textarea>
     </div>
   </div>
 </div>
@@ -34,7 +34,7 @@
     </div>
     <div class="col-md-3 col-xs-3 text-right">
       <a class="btn blue-primary text-white radio-25" role="button">
-        <strong>Twittear</strong>
+        <strong>Tweet</strong>
       </a>
     </div>
   </div>
