--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,26 +11,26 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">
                 <i class="fas fa-home"></i>
-                <span class="text-menu">Inicio</span>
+                <span class="text-menu">Home</span>
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <i class="fas fa-bolt"></i>
-                <span class="text-menu">Momentos</span>
+                <span class="text-menu">Moments</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <i class="fas fa-bell"></i>
-                <span class="text-menu">Notificaciones</span>
+                <span class="text-menu">Notifications</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <i class="fas fa-envelope"></i>
-                <span class="text-menu">Mensajes</span>
+                <span class="text-menu">Messages</span>
               </a>
             </li>
           </ul>
@@ -45,7 +45,7 @@
         <div class="row" style="padding-top: 14px">
           <div class="col-5">
             <div class="input-group mb-3">
-              <input type="text" class="form-control btn-twitter" placeholder="Buscar en twitter" 
+              <input type="text" class="form-control btn-twitter" placeholder="Search Twitter" 
               aria-label="Recipient's username" aria-describedby="button-addon2">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2">
