create side bar left

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,97 @@
 <div class="container">
   <div class="row">
-    <div class="col bg-primary">Profile</div>
+    <div class="col">
+      <div class="row">
+        <div role="button" class="col hover" [ngStyle]="{ 'height': '95px','background-color':'rgb(29, 161, 242)' }">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <div class="row" [ngStyle]="{ 'height': '110px' }">
+        <div class="col bg-white">
+          <div class="row">
+            <div class="col">
+             <div class="div_circle"><i class="fas fa-camera fa-2x icon-border"></i></div>
+            </div>
+            <div class="col-9 divProfileCard">
+              <div><a href="#"  [ngStyle]="{ 'height': '95px','color':'black', 'font-size': '18px' }"><b>Alex Reyna </b></a><span><i class="fas fa-lock"></i></span> </div>
+              <span class="ProfileCard-name"><a href="#" [ngStyle]="{ 'height': '95px','color':'rgb(101,119,134)', 'font-size': '14px' }">@Alx_Reyna</a></span>
+            </div>
+
+          </div>
+          <div class="row ">
+            <div class="col divTweetsFollows">
+              <a href="#" [ngStyle]="{ 'text-decoration':'none','font-weight': 'bold' }">
+                <span [ngStyle]="{ 'color': 'rgb(101, 119, 134)','font-size': '12px' }">Tweets</span>
+                <br>
+                <span [ngStyle]="{ 'font-size': '18px' } ">2</span>
+              </a>
+            </div>
+            <div class="col divTweetsFollows">
+              <a href="#" [ngStyle]="{ 'text-decoration':'none', 'font-weight': 'bold'}">
+                <span [ngStyle]="{ 'color': 'rgb(101, 119, 134)','font-size': '12px' }">Following</span>
+                <br>
+                <span class="pt-0"[ngStyle]="{ 'font-size': '18px' }">14</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row mt-2 bg-white mb-3">
+    <div class="col mt-3 ">
+      <h5>Trends for you -
+        <a href="#"> <font size="2">Change</font></a>
+      </h5>
+      <p class="my-0 tendenciasColor">
+        <a href="#"><b>#BuenViernes</b></a>
+      </p>
+      <p class="foot_tendecias">
+        <small> 1,2 mil Tweets</small>
+      </p>
+      <p class="my-0  tendenciasColor">
+         <a href="#"><b>#YaPasamos</b></a>
+      </p>
+      <p class="foot_tendecias ">
+        <small> 10 mil Tweets</small>
+      </p>
+      <p class="my-0  tendenciasColor">
+         <a href="#"><b>#ElProyecto</b></a>
+      </p>
+      <p class="foot_tendecias ">
+        <small> 5 mil Tweets</small>
+      </p>
+      <p class="my-0  tendenciasColor">
+         <a href="#"><b>#TwitterChing$&/$#..on</b></a>
+      </p>
+      <p class="foot_tendecias ">
+        <small> 2,5 mil Tweets</small>
+      </p>
+      <p class="my-0  tendenciasColor">
+         <a href="#"><b>#BeViernes!!!</b></a>
+      </p>
+      <p class="foot_tendecias">
+        <small> 8,5 mil Tweets</small>
+      </p>
+      <p class="my-0  tendenciasColor">
+        <a href="#">
+          <b>#LeGaneAlIsaacyRichard!!!</b>
+        </a>
+      </p>
+      <p class="foot_tendecias">
+        <small> 8,5 mil Tweets</small>
+      </p>
+
+      
+
+    </div>
   </div>
 </div>
