Resolve no spaces push

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,5 +1,5 @@
 <ng-template #content let-c="close" let-d="dismiss">
-  <div class="modal-header">
+  <div class="modal-header"  id="mymodal">
     <h6 style="margin: auto" class="modal-title text-center" id="modal-basic-title">New Tweet</h6>
     <button style="margin-left: 0" type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
