--- a/src/app/components/suggestions/suggestions.component.html
+++ b/src/app/components/suggestions/suggestions.component.html
@@ -1,149 +1,142 @@
-<div class="container">
-  <div class="row">
-    <div class="col ">
-      <div class="card" style="width: 18rem;">
-        <ul class="list-group list-group-flush">
-
-          <!-- Encabezado -->
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-12">
-                <span>
-                  <strong>Who to follow? </strong>
-                </span>
-                <small>·</small>
-                <small>
-                  <a href="#"> Refresh </a>
-                </small>
-                <small>·</small>
-                <small>
-                  <a href="#"> View all</a>
-                </small>
-              </div>
-            </div>
-          </li>
-
-          <!-- Inicio de los usuarios prueba -->
-          <!-- Usuario 1 -->
-          <li class="list-group-item">
-            <div class="row fontsugerencia">
-              <div class="col-3">
-                <img class="rounded-circle roundedimg" src="https://pbs.twimg.com/profile_images/1019114310868586496/8zjlTU03_400x400.jpg"
-                  alt="Generic placeholder image">
-              </div>
-              <div class="col-9 ">
-                <div class="row">
-                  <div class="col-9">
-                    <div class="elipsis ">
-                      <strong>Bárbara Nuñeza </strong>
-                      <i class="fas fa-check-circle blue"></i> @Barbara Nuñeza </div>
-                  </div>
-                  <div class="col-3">
-                    <i class="fas fa-times"></i>
-                  </div>
-                </div>
-                <div class="col-12 pl-0">
-                  <button type="button" class="btn btn-outline-primary fontsugerencia borderbutton">Follow</button>
-                </div>
-              </div>
-            </div>
-          </li>
-
-          <!-- Usuario 2 -->
-          <li class="list-group-item">
-            <div class="row fontsugerencia">
-              <div class="col-3">
-                <img class="rounded-circle roundedimg" src="https://pbs.twimg.com/profile_images/622229165316571136/fmE5CpTB_400x400.jpg"
-                  alt="Generic placeholder image">
-              </div>
-              <div class="col-9 ">
-                <div class="row">
-                  <div class="col-9">
-                    <div class="elipsis ">
-                      <strong>pictoline </strong>
-                      <i class="fas fa-check-circle blue"></i> @pictoline </div>
-                  </div>
-                  <div class="col-3">
-                    <i class="fas fa-times"></i>
-                  </div>
-                </div>
-                <div class="col-12 pl-0">
-                  <button type="button" class="btn btn-outline-primary fontsugerencia borderbutton">Follow</button>
-                </div>
-              </div>
-            </div>
-          </li>
-
-          <!-- Usuario 3 -->
-          <li class="list-group-item ">
-            <div class="row fontsugerencia">
-              <div class="col-3">
-                <img class="rounded-circle roundedimg" src="https://pbs.twimg.com/profile_images/991180595710513152/V5O-Z320_bigger.jpg"
-                  alt="Generic placeholder image">
-              </div>
-              <div class="col-9 ">
-                <div class="row">
-                  <div class="col-9">
-                    <div class="elipsis">
-                      <strong>Enrique Peña Nieto </strong>
-                      <i class="fas fa-check-circle blue"></i> @Enrique Peña Nieto</div>
-                  </div>
-                  <div class="col-3">
-                    <i class="fas fa-times"></i>
-                  </div>
-                </div>
-                <div class="col-12 pl-0">
-                  <button type="button" class="btn btn-outline-primary fontsugerencia borderbutton">Follow</button>
-                </div>
-              </div>
-            </div>
-          </li>
-          <!-- Fin de usuarios -->
-
-          <!-- Buscarlos por mail (Find people you know)  -->
-          <li class="list-group-item">
-            <div class="row fontsugerencia">
-              <div class="col-2 mt-auto mb-auto">
-                <img class="imgmail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Gmail_Icon.png/245px-Gmail_Icon.png"
-                  alt="Generic placeholder image">
-              </div>
-              <div class="col-10 ">
-                <div class="row">
-                  <div class="col ">
-                    <div>
-                      <strong>Find people you know </strong>
-                    </div>
-                    <span>Import your contacts from Gmail</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row fontsugerencia">
-              <div class="col">
-                <a href="#">Connect other address books</a>
-              </div>
-            </div>
-          </li>
-        </ul>
+<div class="card">
+  <ul class="list-group list-group-flush">
+    <!-- Encabezado -->
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-12">
+          <span>
+            <strong>Who to follow? </strong>
+          </span>
+          <small>·</small>
+          <small>
+            <a href="#"> Refresh </a>
+          </small>
+          <small>·</small>
+          <small>
+            <a href="#"> View all</a>
+          </small>
+        </div>
       </div>
-      <br>
+    </li>
 
-      <div class="card" style="width: 18rem;">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item fontsugerencia">© 2018 Twitter About Help Center Terms Privacy policy Cookies Ads info Brand Blog Status Apps Jobs Marketing Businesses
-            Developers
-          </li>
-          <li class="list-group-item fontsugerencia">
-            <div class="row">
-              <div class="col">
-                <a href="#">Advertise with Twitter</a>
-              </div>
+    <!-- Inicio de los usuarios prueba -->
+    <!-- Usuario 1 -->
+    <li class="list-group-item">
+      <div class="row fontsugerencia">
+        <div class="col-3">
+          <img class="rounded-circle roundedimg" src="https://pbs.twimg.com/profile_images/1019114310868586496/8zjlTU03_400x400.jpg"
+            alt="Generic placeholder image">
+        </div>
+        <div class="col-9 ">
+          <div class="row">
+            <div class="col-9">
+              <div class="elipsis ">
+                <strong>Bárbara Nuñeza </strong>
+                <i class="fas fa-check-circle blue"></i> @Barbara Nuñeza </div>
             </div>
-          </li>
-        </ul>
+            <div class="col-3">
+              <i class="fas fa-times"></i>
+            </div>
+          </div>
+          <div class="col-12 pl-0">
+            <button type="button" class="btn btn-outline-primary fontsugerencia borderbutton">Follow</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+    </li>
+
+    <!-- Usuario 2 -->
+    <li class="list-group-item">
+      <div class="row fontsugerencia">
+        <div class="col-3">
+          <img class="rounded-circle roundedimg" src="https://pbs.twimg.com/profile_images/622229165316571136/fmE5CpTB_400x400.jpg"
+            alt="Generic placeholder image">
+        </div>
+        <div class="col-9 ">
+          <div class="row">
+            <div class="col-9">
+              <div class="elipsis ">
+                <strong>pictoline </strong>
+                <i class="fas fa-check-circle blue"></i> @pictoline </div>
+            </div>
+            <div class="col-3">
+              <i class="fas fa-times"></i>
+            </div>
+          </div>
+          <div class="col-12 pl-0">
+            <button type="button" class="btn btn-outline-primary fontsugerencia borderbutton">Follow</button>
+          </div>
+        </div>
+      </div>
+    </li>
+
+    <!-- Usuario 3 -->
+    <li class="list-group-item ">
+      <div class="row fontsugerencia">
+        <div class="col-3">
+          <img class="rounded-circle roundedimg" src="https://pbs.twimg.com/profile_images/991180595710513152/V5O-Z320_bigger.jpg"
+            alt="Generic placeholder image">
+        </div>
+        <div class="col-9 ">
+          <div class="row">
+            <div class="col-9">
+              <div class="elipsis">
+                <strong>Enrique Peña Nieto </strong>
+                <i class="fas fa-check-circle blue"></i> @Enrique Peña Nieto</div>
+            </div>
+            <div class="col-3">
+              <i class="fas fa-times"></i>
+            </div>
+          </div>
+          <div class="col-12 pl-0">
+            <button type="button" class="btn btn-outline-primary fontsugerencia borderbutton">Follow</button>
+          </div>
+        </div>
+      </div>
+    </li>
+    <!-- Fin de usuarios -->
+
+    <!-- Buscarlos por mail (Find people you know)  -->
+    <li class="list-group-item">
+      <div class="row fontsugerencia">
+        <div class="col-2 mt-auto mb-auto">
+          <img class="imgmail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Gmail_Icon.png/245px-Gmail_Icon.png"
+            alt="Generic placeholder image">
+        </div>
+        <div class="col-10 ">
+          <div class="row">
+            <div class="col ">
+              <div>
+                <strong>Find people you know </strong>
+              </div>
+              <span>Import your contacts from Gmail</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row fontsugerencia">
+        <div class="col">
+          <a href="#">Connect other address books</a>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+<br>
+
+<div class="card">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item fontsugerencia">© 2018 Twitter About Help Center Terms Privacy policy Cookies Ads info Brand Blog Status Apps Jobs Marketing Businesses
+      Developers
+    </li>
+    <li class="list-group-item fontsugerencia">
+      <div class="row">
+        <div class="col">
+          <a href="#">Advertise with Twitter</a>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
