--- a/src/app/components/tweet/tweet.component.html
+++ b/src/app/components/tweet/tweet.component.html
@@ -29,11 +29,11 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3 col-xs-3 text-primary center-v text-right">
+    <div class="col-md-3 col-xs-3 text-primary center-v text-right d-none d-sm-block">
       <i class="fas fa-plus-circle fa-2x"></i>
     </div>
     <div class="col-md-3 col-xs-3 text-right">
-      <a class="btn blue-primary text-white radio-25"  (click)="postTweet()" role="button">
+      <a class="btn blue-primary text-white radio-25"  (click)="postTweet();" data-dismiss="#mymodal" role="button">
         <strong>Tweet</strong>
       </a>
     </div>
