--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,7 +46,7 @@
           <div class="col-5">
             <div class="input-group mb-3">
               <input type="text" class="form-control btn-twitter" placeholder="Search Twitter" 
-              aria-label="Recipient's username" aria-describedby="button-addon2">
+              aria-label="Recipient's username" aria-describedby="button-addon2" [(ngModel)]="filtro">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                   <i class="fas fa-search"></i>
